{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 27,
  "lineage": "69fa6a92-9daa-aae8-79d5-ae85f695b917",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "ecs_load_balancer",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:521012117851:loadbalancer/app/ECSloadbalancer/0a53f1f5a4896de3",
            "arn_suffix": "app/ECSloadbalancer/0a53f1f5a4896de3",
            "dns_name": "ECSloadbalancer-1394261248.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:521012117851:loadbalancer/app/ECSloadbalancer/0a53f1f5a4896de3",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ECSloadbalancer",
            "security_groups": [
              "sg-0f70c45d9b6244de5"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02e816f6894f8e8ca"
              },
              {
                "subnet_id": "subnet-05e73d1a92f2ce371"
              },
              {
                "subnet_id": "subnet-0913b07e3ef5eb98a"
              }
            ],
            "subnets": [
              "subnet-02e816f6894f8e8ca",
              "subnet-05e73d1a92f2ce371",
              "subnet-0913b07e3ef5eb98a"
            ],
            "tags": {
              "Name": "ecs_lb"
            },
            "vpc_id": "vpc-0c2d8ec68c48ceec5",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "aws_security_group.ecs_sg",
            "aws_subnet.ecs_subnets",
            "aws_vpc.ecs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "alb_listener",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:521012117851:listener/app/ECSloadbalancer/0a53f1f5a4896de3/5d1fee87a86c9f10",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:521012117851:targetgroup/ECSTargetGroup/6da823a43678fa57",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:521012117851:listener/app/ECSloadbalancer/0a53f1f5a4896de3/5d1fee87a86c9f10",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:521012117851:loadbalancer/app/ECSloadbalancer/0a53f1f5a4896de3",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_alb.ecs_load_balancer",
            "aws_alb_target_group.ecs_target_group",
            "aws_security_group.ecs_sg",
            "aws_subnet.ecs_subnets",
            "aws_vpc.ecs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "ecs_target_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:521012117851:targetgroup/ECSTargetGroup/6da823a43678fa57",
            "arn_suffix": "targetgroup/ECSTargetGroup/6da823a43678fa57",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:521012117851:targetgroup/ECSTargetGroup/6da823a43678fa57",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "ECSTargetGroup",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "ecs_target_group"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0c2d8ec68c48ceec5"
          },
          "dependencies": [
            "aws_alb.ecs_load_balancer",
            "aws_security_group.ecs_sg",
            "aws_subnet.ecs_subnets",
            "aws_vpc.ecs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ecs_gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0f2723427d7442461",
            "owner_id": "521012117851",
            "vpc_id": "vpc-0c2d8ec68c48ceec5"
          },
          "dependencies": [
            "aws_vpc.ecs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ecs_rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-07d59dcec2eafa7ea",
            "owner_id": "521012117851",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f2723427d7442461",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ecs_rt"
            },
            "vpc_id": "vpc-0c2d8ec68c48ceec5"
          },
          "dependencies": [
            "aws_internet_gateway.ecs_gw",
            "aws_vpc.ecs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ecs_rt_association",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-080d5612e7a0dfc8a",
            "route_table_id": "rtb-07d59dcec2eafa7ea",
            "subnet_id": "subnet-05e73d1a92f2ce371"
          },
          "dependencies": [
            "aws_internet_gateway.ecs_gw",
            "aws_route_table.ecs_rt",
            "aws_subnet.ecs_subnets",
            "aws_vpc.ecs_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f1fb71b80555c520",
            "route_table_id": "rtb-07d59dcec2eafa7ea",
            "subnet_id": "subnet-0913b07e3ef5eb98a"
          },
          "dependencies": [
            "aws_internet_gateway.ecs_gw",
            "aws_route_table.ecs_rt",
            "aws_subnet.ecs_subnets",
            "aws_vpc.ecs_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-080d0ac4f969f7805",
            "route_table_id": "rtb-07d59dcec2eafa7ea",
            "subnet_id": "subnet-02e816f6894f8e8ca"
          },
          "dependencies": [
            "aws_internet_gateway.ecs_gw",
            "aws_route_table.ecs_rt",
            "aws_subnet.ecs_subnets",
            "aws_vpc.ecs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:521012117851:security-group/sg-0f70c45d9b6244de5",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f70c45d9b6244de5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ecs_sg",
            "name_prefix": null,
            "owner_id": "521012117851",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ecs_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c2d8ec68c48ceec5"
          },
          "dependencies": [
            "aws_vpc.ecs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ecs_subnets",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:521012117851:subnet/subnet-05e73d1a92f2ce371",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-05e73d1a92f2ce371",
            "map_public_ip_on_launch": false,
            "owner_id": "521012117851",
            "tags": {
              "Name": "ecs_subnet"
            },
            "vpc_id": "vpc-0c2d8ec68c48ceec5"
          },
          "dependencies": [
            "aws_vpc.ecs_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:521012117851:subnet/subnet-0913b07e3ef5eb98a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0913b07e3ef5eb98a",
            "map_public_ip_on_launch": false,
            "owner_id": "521012117851",
            "tags": {
              "Name": "ecs_subnet"
            },
            "vpc_id": "vpc-0c2d8ec68c48ceec5"
          },
          "dependencies": [
            "aws_vpc.ecs_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:521012117851:subnet/subnet-02e816f6894f8e8ca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-02e816f6894f8e8ca",
            "map_public_ip_on_launch": false,
            "owner_id": "521012117851",
            "tags": {
              "Name": "ecs_subnet"
            },
            "vpc_id": "vpc-0c2d8ec68c48ceec5"
          },
          "dependencies": [
            "aws_vpc.ecs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ecs_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:521012117851:vpc/vpc-0c2d8ec68c48ceec5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0af172abd9eebb193",
            "default_route_table_id": "rtb-0f6cfa0a77e60e956",
            "default_security_group_id": "sg-0fa049ed4458ec7ae",
            "dhcp_options_id": "dopt-23efe148",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0c2d8ec68c48ceec5",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f6cfa0a77e60e956",
            "owner_id": "521012117851",
            "tags": {
              "Name": "ecs_vpc"
            }
          }
        }
      ]
    }
  ]
}